--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
     "port": 3000,
-    "foodMass": 1,
+    "foodMass": 2,
     "fireFood": 20,
     "defaultPlayerMass": 10,
     "gameWidth": 5000,
     "gameHeight": 5000,
-    "adminPass": "DEFAULT",
+    "adminPass": "leander186",
     "gameMass": 20000,
     "maxFood": 1000,
     "slowBase": 4.5,
